Mon Dec 10 04:58:22 PM PST 2001 Chris Phelps <chicane@reninet.com>
    * Modified gtksourcebuffer line marker api to allow for multiple markers per line.
    * Added a a few new marker related functions for convenience purposes and completeness
    * Update gtksourceview to deal with multiple markers per line (composite pixbufs)

2001-12-09  Dave Camp  <dave@ximian.com>

	* src/gtksourcebuffer.h: Fixed a broken comment.

Sat Dec 08  03:46:47 2001 CET Mikael Hermansson <tyan@linux.se>

  * Hmm It's time to start contribute to my old project again. Nothing new so far except I have changed ISP provider and my new email is tyan@linux.se.
    Maybe I have some old/new stuff in my local source repository (at http://tyan.homeip.net) but it looks like like Chris has already done some good stuff :-)  

Thu Dec 06 02:25:29 AM PST 2001 Chris Phelps <chicane@reninet.com>
   * split the line pixmap code up between the view and buffer implementations.
     you can now have multiple views of a buffer that will show different pixmaps,
     but in the same places...unneeded flexibility, but I thought it was a good idea.
     (It was Dave Camp's)

Thu Dec 06 01:14:40 AM PST 2001 Chris Phelps <chicane@reninet.com>
   * Fixed a bug in the line number drawing code to allow for drawing the line number
     on the final line of the view even if it is empty.

Thu Dec 06 01:13:42 AM PST 2001 Chris Phelps <chicane@reninet.com>
   * I have resurected this module and put it to use in Glimmer, and 
     Dave Camp is playing with it in Dryad as a test bed for gnome-debug

Sat Feb 17  13:19:53 2001 CET Mikael Hermansson<mikeh@bahnhof.se>

* Realesing 0.0.3

Sat Feb 17  13:03:59 2001 CET Mikael Hermansson<mikeh@bahnhof.se>

  * gtktextview.c bugfixes in find_correct_bracket/key_press_event code that made 
  the bracket sometime show up incorrectly in line.

Sat Feb 17  02:19:27 2001 CET Mikael Hermansson<mikeh@bahnhof.se>
